# shingari

./: .gitignore  CREDITS.yaml  Cargo.toml  README.md
.github/workflows/: build.yml
src/: fs.rs  glob.rs  main.rs  models.rs  my_log.rs  path.rs  process.rs  rtid.rs  slack.rs  time.rs
src/cmd/: check.rs  mod.rs
src/cmd/process/: add.rs  get.rs  list.rs  mod.rs  remove.rs
src/cmd/slack/: add.rs  get.rs  list.rs  mod.rs  remove.rs
