[package]
name = "shingari"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.4.4", features = ["cargo"]}
dirs = "5.0.1"
serde = {version = "1.0.188", features = ["derive"]}
serde_json = "1.0.107"
glob = "0.3.1"
procfs = "0.15.1"
ureq = "2.7.1"
log = "0.4.20"
log4rs = {version = "1.2.0", features = ["rolling_file_appender", "pattern_encoder"]}
